# assolo

./: .editorconfig  .gitignore  Assolo.code-workspace  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY_POLICY.md  README.md  SECURITY.md  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ADSREnvelope.cpp  ADSREnvelope.h  AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  Oscillator.cpp  Oscillator.h  native-lib.cpp
app/src/main/java/com/smartinstrument/app/: MainActivity.kt
app/src/main/java/com/smartinstrument/app/audio/: KeyDetector.kt  NativeAudioEngine.kt  TrackPlayer.kt
app/src/main/java/com/smartinstrument/app/music/: MusicalKey.kt  PentatonicScale.kt
app/src/main/java/com/smartinstrument/app/ui/components/: Controls.kt  DrumPad.kt  InstrumentGrid.kt
app/src/main/java/com/smartinstrument/app/ui/screens/: MainScreen.kt
app/src/main/java/com/smartinstrument/app/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
docs/assets/: README.md
gradle/: libs.versions.toml
